fix unreadable links profile

--- a/public/css/web/main.scss
+++ b/public/css/web/main.scss
@@ -224,10 +224,9 @@ body{
     a{
       padding:10px 10px 10px 0;
       display: block;
-      color:#ffffff;
+      color:#222222;
     }
     ul li a{
-      color:#222222;
       padding:5px;
     }
   }
